--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -23,6 +23,7 @@ a {
 
 .header {
   /* border-bottom: 1px solid #e2e8f0; */
+  position: fixed;
   height: 80px;
   width: 100%;
   display: grid;
@@ -57,7 +58,7 @@ a {
 
 .nav-menu {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
 }
 
@@ -68,8 +69,8 @@ a {
 }
 
 .nav-link {
-  font-size: 1.6rem;
-  font-weight: 400;
+  font-size: 1.8rem;
+  font-weight: 500;
   /* color: #475569; */
   color: #fff;
   position: relative;
@@ -83,7 +84,7 @@ a {
   width: 0;
   height: 2px;
   background-color: #cdc392; /* Color of the line */
-  transition: width 0.3s; /* Adding width transition for smooth effect */
+  transition: width 0.5s; /* Adding width transition for smooth effect */
 }
 
 .nav-link:hover {
@@ -109,7 +110,7 @@ a {
   .nav-menu {
     position: fixed;
     left: -100%;
-    top: 5rem;
+    top: 7rem;
     flex-direction: column;
     background-color: #fff;
     width: 100%;
